@@ -6,4 +6,5 @@
 /META.yml
 /MYMETA.yml
 /blib/
+/cover_db/
 /pm_to_blib
