@@ -4,6 +4,7 @@
 ^Makefile$
 ^MYMETA\.yml$
 ^blib/
+^cover_db/
 ^pm_to_blib$
 ~$
 \.old$
